Update leftover bash to shell snippets

--- a/src/pages/docs/browser-support.mdx
+++ b/src/pages/docs/browser-support.mdx
@@ -17,7 +17,7 @@ If not, we recommend that you use [Autoprefixer](https://github.com/postcss/auto
 
 To use it, install it via npm:
 
-```bash
+```shell
 # Using npm
 npm install autoprefixer
 
