--- a/src/pages/docs/configuration.mdx
+++ b/src/pages/docs/configuration.mdx
@@ -50,7 +50,7 @@ Every section of the config file is optional, so you only have to specify what y
 
 Generate a Tailwind config file for your project using the Tailwind CLI utility included when you install the `tailwindcss` npm package:
 
-```bash
+```shell
 npx tailwindcss init
 ```
 
@@ -75,7 +75,7 @@ module.exports = {
 
 To use a name other than `tailwind.config.js`, pass it as an argument on the command-line:
 
-```bash
+```shell
 npx tailwindcss init tailwindcss-config.js
 ```
 
@@ -94,7 +94,7 @@ module.exports = {
 
 Use the `-p` flag if you'd like to also generate a basic `postcss.config.js` file alongside your `tailwind.config.js` file:
 
-```bash
+```shell
 npx tailwindcss init -p
 ```
 
@@ -115,7 +115,7 @@ For most users we encourage you to keep your config file as minimal as possible,
 
 If you'd rather scaffold a complete configuration file that includes all of Tailwind's default configuration, use the `--full` option:
 
-```bash
+```shell
 npx tailwindcss init --full
 ```
 
