--- a/src/pages/docs/upgrading-to-v1.mdx
+++ b/src/pages/docs/upgrading-to-v1.mdx
@@ -36,13 +36,13 @@ These changes affect all users, whether you are using Tailwind with PostCSS and 
 
 Install the latest version of Tailwind:
 
-```bash
+```shell
 npm install tailwindcss@^1.0 --save-dev
 ```
 
 Or using Yarn:
 
-```bash
+```shell
 yarn add -D tailwindcss@^1.0
 ```
 
