--- a/src/pages/docs/using-with-preprocessors.mdx
+++ b/src/pages/docs/using-with-preprocessors.mdx
@@ -32,7 +32,7 @@ The canonical plugin for handling this with PostCSS is [postcss-import](https://
 
 To use it, install the plugin via npm:
 
-```bash
+```shell
 # npm
 npm install postcss-import
 
@@ -134,7 +134,7 @@ To add support for nested declarations, you have two options:
 
 To use either of these plugins, install them via npm:
 
-```bash
+```shell
 # npm
 npm install postcss-nested  # or postcss-nesting
 
@@ -164,7 +164,7 @@ However if you need to support IE11, you can use the [postcss-custom-properties]
 
 To use it, install it via npm:
 
-```bash
+```shell
 # npm
 npm install postcss-custom-properties
 
@@ -193,7 +193,7 @@ You can add support for dozens of upcoming CSS features to your project using th
 
 To use it, install it via npm:
 
-```bash
+```shell
 # npm
 npm install postcss-preset-env
 
